Add IPP benchmark

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -45,3 +45,18 @@ if(BUILD_BENCHMARK_BLAZE)
     find_package(blaze REQUIRED)
     add_subdirectory(blaze)
 endif()
+
+if(BUILD_BENCHMARK_IPP)
+    #find_package(IPP REQUIRED)
+    find_path(IPP_INCLUDE_DIR ipp.h PATHS ${IPP_ROOT}/include)
+    message("IPP_INCLUDE_DIR: ${IPP_INCLUDE_DIR}")
+    find_library(IPP_LIB_CORE ippcore PATHS ${IPP_ROOT}/lib)
+    find_library(IPP_LIB_I ippi PATHS ${IPP_ROOT}/lib)
+    message("IPP_LIB_CORE: ${IPP_LIB_CORE}")
+    message("IPP_LIB_I: ${IPP_LIB_I}")
+    add_library(ipp::ipp INTERFACE IMPORTED)
+    target_include_directories(ipp::ipp INTERFACE ${IPP_INCLUDE_DIR})
+    target_link_libraries(ipp::ipp INTERFACE ${IPP_LIB_CORE} ${IPP_LIB_I})
+
+    add_subdirectory(ipp)
+endif()
