Do not search for BLAS and LAPACK
Blaze links with BLAS and LAPACK
libraries by default, this commit
adds arguments to configure step to
disable linking to them

--- a/.ci/azure-pipelines/steps-install-blaze.yml
+++ b/.ci/azure-pipelines/steps-install-blaze.yml
@@ -9,6 +9,6 @@ steps:
       git clone --depth=1 --branch v3.8 https://bitbucket.org/blaze-lib/blaze.git
       cd blaze
       mkdir build && cd build
-      cmake ..
+      cmake -DUSE_LAPACK=OFF -DBLAZE_BLAS_MODE=OFF ..
       sudo make install
     displayName: "Install Blaze"
