--- a/.ci/azure-pipelines/steps-install-blaze.yml
+++ b/.ci/azure-pipelines/steps-install-blaze.yml
@@ -6,7 +6,7 @@
 
 steps:
   - bash: |
-      git clone --depth=1 --branch v3.8 https://bitbucket.org/blaze-lib/blaze.git
+      git clone --depth=1 https://scarlet-roses@bitbucket.org/scarlet-roses/blaze.git
       cd blaze
       mkdir build && cd build
       cmake -DUSE_LAPACK=OFF -DBLAZE_BLAS_MODE=OFF -DBLAZE_CACHE_SIZE_AUTO=OFF ..
