--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
             install: clang-3.9
           - toolset: clang
             compiler: clang++-4.0
-            cxxstd: "11,14,1z"
+            cxxstd: "11,14"
             os: ubuntu-16.04
             install: clang-4.0
           - toolset: clang
