--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,16 +44,19 @@ jobs:
           - toolset: clang
             compiler: clang++-3.5
             cxxstd: "11,14"
+            define: "_GLIBCXX_USE_CXX11_ABI=0"
             os: ubuntu-16.04
             install: clang-3.5
           - toolset: clang
             compiler: clang++-3.6
             cxxstd: "11,14"
+            define: "_GLIBCXX_USE_CXX11_ABI=0"
             os: ubuntu-16.04
             install: clang-3.6
           - toolset: clang
             compiler: clang++-3.7
             cxxstd: "11,14"
+            define: "_GLIBCXX_USE_CXX11_ABI=0"
             os: ubuntu-16.04
             install: clang-3.7
           - toolset: clang
@@ -129,9 +132,16 @@ jobs:
           echo "using ${{matrix.toolset}} : : ${{matrix.compiler}} ;" > ~/user-config.jam
 
       - name: Run tests
+        if: "!matrix.define"
         run: |
           cd ../boost-root
           ./b2 -j3 libs/$LIBRARY/test toolset=${{matrix.toolset}} cxxstd=${{matrix.cxxstd}} variant=debug,release
+
+      - name: Run tests
+        if: matrix.define
+        run: |
+          cd ../boost-root
+          ./b2 -j3 libs/$LIBRARY/test toolset=${{matrix.toolset}} cxxstd=${{matrix.cxxstd}} define=${{matrix.define}} variant=debug,release
 
   windows:
     strategy:
