--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,12 +41,13 @@ jobs:
           - toolset: gcc-10
             cxxstd: "11,14,17,2a"
             os: ubuntu-18.04
-          - toolset: clang
-            compiler: clang++-3.5
-            cxxstd: "11,14"
-            define: "_GLIBCXX_USE_CXX11_ABI=0"
-            os: ubuntu-16.04
-            install: clang-3.5
+          # Disable until master receives fixes like https://github.com/boostorg/gil/pull/542
+          # - toolset: clang
+          #   compiler: clang++-3.5
+          #   cxxstd: "11,14"
+          #   define: "_GLIBCXX_USE_CXX11_ABI=0"
+          #   os: ubuntu-16.04
+          #   install: clang-3.5
           - toolset: clang
             compiler: clang++-3.6
             cxxstd: "11,14"
