--- a/test/core/image_processing/CMakeLists.txt
+++ b/test/core/image_processing/CMakeLists.txt
@@ -35,7 +35,10 @@ foreach(_name
   box_filter
   median_filter
   sobel_scharr
-  anisotropic_diffusion)
+  anisotropic_diffusion
+  hough_parameter
+  hough_line_transform
+  hough_circle_transform)
   set(_test t_core_image_processing_${_name})
   set(_target test_core_image_processing_${_name})
 
