Improved compatibility for builds and rectifying whitespace use

--- a/test/core/image_processing/CMakeLists.txt
+++ b/test/core/image_processing/CMakeLists.txt
@@ -7,10 +7,10 @@
 # http://www.boost.org/LICENSE_1_0.txt)
 #
 foreach(_name
-    morphology
     threshold_binary
     threshold_truncate
-    threshold_otsu)
+    threshold_otsu
+    morphology)
     set(_test t_core_image_processing_${_name})
     set(_target test_core_image_processing_${_name})
 
