--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -20,9 +20,4 @@ jobs:
         && sudo apt-get install libraw-dev
         && sudo apt-get install lcov #Installing dependencies
     - run:
-        set -e
-        && lcov --directory bin.v2 --capture --no-external --directory $(pwd) --output-file coverage.info > /dev/null 2>&1
-        && lcov --extract coverage.info $(pwd)'/boost/gil/*' --output-file coverage.info > /dev/null
-        && lcov --list coverage.info
-        && cd libs/gil
-    - run: bash <(curl -s https://codecov.io/bash) -f ../../coverage.info || echo "Codecov did not collect coverage reports" # Upload coverage reports to Codecov
+        - bash libs/gil/.ci/coverage.sh
