--- a/test/core/image_processing/CMakeLists.txt
+++ b/test/core/image_processing/CMakeLists.txt
@@ -9,7 +9,8 @@
 foreach(_name
     threshold_binary
     threshold_truncate
-    threshold_otsu)
+    threshold_otsu
+    morphology)
     set(_test t_core_image_processing_${_name})
     set(_target test_core_image_processing_${_name})
 
