ci: Disable system.debug on AzP

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -5,7 +5,7 @@
 # (See accompanying file LICENSE_1_0.txt or copy at http://boost.org/LICENSE_1_0.txt)
 #
 variables:
-  system.debug: true
+  #system.debug: true
   configuration: release
 
 trigger:
