Port TuttleOFX shrink extension
Add shrink

First checkpoint

test cases added

Add pattern

Updates

Updates

Port TuttleOFX extensions

Improve comments

Update copyright

Improve copyright header

Pass build

Add aligned extendion

Remove headers

Add shrink

--- a/test/extension/toolbox/CMakeLists.txt
+++ b/test/extension/toolbox/CMakeLists.txt
@@ -24,7 +24,8 @@ foreach(_name
   is_bit_aligned
   is_homogeneous
   pixel_bit_size
-  subchroma_image)
+  subchroma_image
+  shrink)
   set(_test t_ext_toolbox_${_name})
   set(_target test_ext_toolbox_${_name})
 
