ci: Fix availability of GCC 8 on (updated?) Ubuntu 18.04
The `compiler` property should trigger creation of `user-config.jam`
with the expected GCC 8 defined.

Something has changed on the GitHub Actions images or Boost.Build
and GCC 8 build job started failing:

   /home/runner/work/gil/boost-root/tools/build/src/tools/gcc.jam:203: in gcc.init from module gcc
   error: toolset gcc initialization:
   error: version '8' requested but 'g++-8' not found and version '7.5.0' of default 'g++' does not match

e.g. https://github.com/boostorg/gil/pull/562/checks?check_run_id=2246393722

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
             cxxstd: "11,14,17"
             os: ubuntu-18.04
           - toolset: gcc-8
+            compiler: g++-8
             cxxstd: "11,14,17,2a"
             os: ubuntu-18.04
           - toolset: gcc-9
