--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,11 @@ jobs:
           - toolset: gcc-7
             cxxstd: "11,14,17"
             os: ubuntu-18.04
-          - toolset: gcc-8
+          - toolset: gcc
             compiler: g++-8
             cxxstd: "11,14,17,2a"
             os: ubuntu-18.04
+            install: g++-8
           - toolset: gcc-9
             cxxstd: "11,14,17,2a"
             os: ubuntu-18.04
@@ -86,6 +87,7 @@ jobs:
             compiler: clang++-8
             cxxstd: "11,14,17,2a"
             os: ubuntu-20.04
+            install: clang-8
           - toolset: clang
             compiler: clang++-9
             cxxstd: "11,14,17,2a"
@@ -124,6 +126,7 @@ jobs:
         if: matrix.compiler
         run: |
           echo "using ${{matrix.toolset}} : : ${{matrix.compiler}} ;" > ~/user-config.jam
+          cat ~/user-config.jam
 
       - name: Run tests
         if: "!matrix.define"
