ci: Fix availability of toolsets in updated Ubuntu images of GitHub Actions (#589)
The `compiler` property should trigger creation of `user-config.jam`
with the expected GCC 8 defined.

Something has changed on the GitHub Actions images or Boost.Build
and GCC 8 build job started failing:

   /home/runner/work/gil/boost-root/tools/build/src/tools/gcc.jam:203: in gcc.init from module gcc
   error: toolset gcc initialization:
   error: version '8' requested but 'g++-8' not found and version '7.5.0' of default 'g++' does not match

e.g. https://github.com/boostorg/gil/pull/562/checks?check_run_id=2246393722

The compilers should be `install`-ed explicitly to avoid such issues in future.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,11 @@ jobs:
           - toolset: gcc-7
             cxxstd: "11,14,17"
             os: ubuntu-18.04
-          - toolset: gcc-8
+          - toolset: gcc
+            compiler: g++-8
             cxxstd: "11,14,17,2a"
             os: ubuntu-18.04
+            install: g++-8
           - toolset: gcc-9
             cxxstd: "11,14,17,2a"
             os: ubuntu-18.04
@@ -76,6 +78,7 @@ jobs:
             compiler: clang++-6.0
             cxxstd: "11,14,17"
             os: ubuntu-18.04
+            install: clang-6.0
           - toolset: clang
             compiler: clang++-7
             cxxstd: "11,14,17"
@@ -85,6 +88,7 @@ jobs:
             compiler: clang++-8
             cxxstd: "11,14,17,2a"
             os: ubuntu-20.04
+            install: clang-8
           - toolset: clang
             compiler: clang++-9
             cxxstd: "11,14,17,2a"
@@ -123,6 +127,7 @@ jobs:
         if: matrix.compiler
         run: |
           echo "using ${{matrix.toolset}} : : ${{matrix.compiler}} ;" > ~/user-config.jam
+          cat ~/user-config.jam
 
       - name: Run tests
         if: "!matrix.define"
