--- a/test/core/image_processing/CMakeLists.txt
+++ b/test/core/image_processing/CMakeLists.txt
@@ -10,7 +10,8 @@ foreach(_name
     threshold_binary
     threshold_truncate
     threshold_otsu
-    morphology)
+    morphology
+    distance_transform)
     set(_test t_core_image_processing_${_name})
     set(_target test_core_image_processing_${_name})
 
