--- a/test/extension/toolbox/CMakeLists.txt
+++ b/test/extension/toolbox/CMakeLists.txt
@@ -23,9 +23,9 @@ foreach(_name
   get_pixel_type
   is_bit_aligned
   is_homogeneous
+  pattern
   pixel_bit_size
-  subchroma_image
-  pattern)
+  subchroma_image)
   set(_test t_ext_toolbox_${_name})
   set(_target test_ext_toolbox_${_name})
 
