--- a/test/extension/toolbox/CMakeLists.txt
+++ b/test/extension/toolbox/CMakeLists.txt
@@ -24,8 +24,8 @@ foreach(_name
   is_bit_aligned
   is_homogeneous
   pixel_bit_size
-  subchroma_image
-  shrink)
+  shrink
+  subchroma_image)
   set(_test t_ext_toolbox_${_name})
   set(_target test_ext_toolbox_${_name})
 
