ci: Remove /std:c++latest from MSVC build variants
This should work around the Internal Compiler Error
due to std::vector<std::vector<bool>>, see
https://github.com/boostorg/gil/issues/645

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,7 +148,7 @@ jobs:
       matrix:
         include:
           - toolset: msvc-14.2
-            cxxstd: "14,17,latest"
+            cxxstd: "14,17"
             addrmd: 32,64
             os: windows-2019
           - toolset: gcc
@@ -156,7 +156,7 @@ jobs:
             addrmd: 64
             os: windows-2019
           - toolset: msvc-14.3
-            cxxstd: "14,17,latest"
+            cxxstd: "14,17"
             addrmd: 32,64
             os: windows-2022
 
