test: Add virtual_2d_locator fixture; is_2d_traversable test case

--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -35,6 +35,7 @@ add_subdirectory(color_base)
 add_subdirectory(pixel)
 add_subdirectory(iterator)
 add_subdirectory(locator)
+add_subdirectory(virtual_2d_locator)
 add_subdirectory(image)
 add_subdirectory(image_view)
 add_subdirectory(algorithm)
