test: Add more basic cases for image class (#423)
This hopefully will begin extensive test suite for the image class to
maintain decent coverage for this major class of GIL.

--- a/test/core/image/CMakeLists.txt
+++ b/test/core/image/CMakeLists.txt
@@ -7,8 +7,9 @@
 #
 foreach(_name
   concepts
-  image
-  empty_dimensions)
+  alignment
+  empty_dimensions
+  image)
   set(_test t_core_image_${_name})
   set(_target test_core_image_${_name})
 
