--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,14 +28,16 @@ jobs:
           - toolset: gcc
             compiler: g++-8
             cxxstd: "14"
-            os: ubuntu-18.04
+            os: ubuntu-20.04
             install: g++-8
           - toolset: gcc-9
             cxxstd: "14,17"
-            os: ubuntu-18.04
+            os: ubuntu-20.04
+            install: g++-9
           - toolset: gcc-10
             cxxstd: "14,17"
-            os: ubuntu-18.04
+            os: ubuntu-20.04
+            install: g++-10
           - toolset: clang
             compiler: clang++-3.9
             cxxstd: "14"
@@ -54,12 +56,12 @@ jobs:
           - toolset: clang
             compiler: clang++-6.0
             cxxstd: "14,17"
-            os: ubuntu-18.04
+            os: ubuntu-20.04
             install: clang-6.0
           - toolset: clang
             compiler: clang++-7
             cxxstd: "14,17"
-            os: ubuntu-18.04
+            os: ubuntu-20.04
             install: clang-7
           - toolset: clang
             compiler: clang++-8
