--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,14 @@ jobs:
         include:
           - toolset: gcc-6
             cxxstd: "14,1z"
-            os: ubuntu-18.04
+            os: ubuntu-latest
+            container: ubuntu:18.04
             install: g++-6
           - toolset: gcc-7
             cxxstd: "14,17"
-            os: ubuntu-18.04
-          - toolset: gcc
+            install: g++-7
+            os: ubuntu-20.04
+          - toolset: gcc-8
             compiler: g++-8
             cxxstd: "14"
             os: ubuntu-20.04
@@ -41,17 +43,20 @@ jobs:
           - toolset: clang
             compiler: clang++-3.9
             cxxstd: "14"
-            os: ubuntu-18.04
+            os: ubuntu-latest
+            container: ubuntu:18.04
             install: clang-3.9
           - toolset: clang
             compiler: clang++-4.0
             cxxstd: "14"
-            os: ubuntu-18.04
+            os: ubuntu-latest
+            container: ubuntu:18.04
             install: clang-4.0
           - toolset: clang
             compiler: clang++-5.0
             cxxstd: "14,1z"
-            os: ubuntu-18.04
+            os: ubuntu-latest
+            container: ubuntu:18.04
             install: clang-5.0
           - toolset: clang
             compiler: clang++-6.0
@@ -82,9 +87,16 @@ jobs:
             os: macos-11
 
     runs-on: ${{matrix.os}}
+    container: ${{matrix.container}
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Setup container environment
+        if: matrix.container
+        run: |
+          apt-get update
+          apt-get -y install sudo python3 git g++
 
       - name: Install packages
         if: matrix.install
