--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,13 +20,14 @@ jobs:
         include:
           - toolset: gcc-6
             cxxstd: "14,1z"
-            os: ubuntu-18.04
+            os: ubuntu-latest
+            container: ubuntu:18.04
             install: g++-6
           - toolset: gcc-7
             cxxstd: "14,17"
-            os: ubuntu-18.04
-          - toolset: gcc
-            compiler: g++-8
+            install: g++-7
+            os: ubuntu-20.04
+          - toolset: gcc-8
             cxxstd: "14"
             os: ubuntu-20.04
             install: g++-8
@@ -41,17 +42,20 @@ jobs:
           - toolset: clang
             compiler: clang++-3.9
             cxxstd: "14"
-            os: ubuntu-18.04
+            os: ubuntu-latest
+            container: ubuntu:18.04
             install: clang-3.9
           - toolset: clang
             compiler: clang++-4.0
             cxxstd: "14"
-            os: ubuntu-18.04
+            os: ubuntu-latest
+            container: ubuntu:18.04
             install: clang-4.0
           - toolset: clang
             compiler: clang++-5.0
             cxxstd: "14,1z"
-            os: ubuntu-18.04
+            os: ubuntu-latest
+            container: ubuntu:18.04
             install: clang-5.0
           - toolset: clang
             compiler: clang++-6.0
@@ -82,13 +86,20 @@ jobs:
             os: macos-11
 
     runs-on: ${{matrix.os}}
+    container: ${{matrix.container}}
 
     steps:
       - uses: actions/checkout@v3
 
+      - name: Setup container environment
+        if: matrix.container
+        run: |
+          apt-get -y update
+          apt-get -y install sudo python3 git g++
+
       - name: Install packages
         if: matrix.install
-        run: sudo apt install ${{matrix.install}}
+        run: sudo apt-get -y install ${{matrix.install}}
 
       - name: Setup Boost
         run: |
@@ -99,7 +110,7 @@ jobs:
           cd boost-root
           cp -r $GITHUB_WORKSPACE/* libs/$LIBRARY
           git submodule update --init tools/boostdep
-          python tools/boostdep/depinst/depinst.py --git_args "--jobs 3" $LIBRARY
+          python3 tools/boostdep/depinst/depinst.py --git_args "--jobs 3" $LIBRARY
           ./bootstrap.sh
           ./b2 -d0 headers
 
