--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
 env:
   LIBRARY: gil
   UBSAN_OPTIONS: print_stacktrace=1
+  ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
 jobs:
   posix:
@@ -83,7 +84,7 @@ jobs:
             os: ubuntu-20.04
           - toolset: clang
             cxxstd: "14,17"
-            os: macos-11
+            os: macos-12
 
     runs-on: ${{matrix.os}}
     container: ${{matrix.container}}
