--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -171,8 +171,11 @@ jobs:
             container: ubuntu:25.04
             install: clang-20
           - toolset: clang
-            cxxstd: "14,17"
-            os: macos-13
+            cxxstd: "14,17,20"
+            os: macos-14
+          - toolset: clang
+            cxxstd: "14,17,20"
+            os: macos-15
 
     runs-on: ${{matrix.os}}
     container:
