ci: drop clang++=5 stdcxx=1z build variant

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
             install: clang-4.0
           - toolset: clang
             compiler: clang++-5.0
-            cxxstd: "14,1z"
+            cxxstd: "14"
             os: ubuntu-latest
             container: ubuntu:18.04
             install: clang-5.0
